# ECE140B-Postura

./: README.md
esp32/: env.example  platformio.ini  pre_extra_script.py
esp32/src/: main.cpp
frontend/: README.md  index.html
frontend/src/app/: routes.tsx
frontend/src/app/components/layout/: Layout.tsx
frontend/src/app/context/: AppContext.tsx
frontend/src/app/pages/: DashboardPage.tsx  ProfilePage.tsx  SessionPage.tsx  SignInPage.tsx  SummaryPage.tsx
python/: .env  old_data.csv  posture_data.csv  pyproject.toml  server.py
python/static/: script.js  style.css
python/templates/: index.html
website/: .env  Dockerfile  README.md  docker-compose.yml  env.example  init.sql  main.py  posture_data.csv  pyproject.toml  requirement.txt
website/static/: dashboard.css  dashboard.js  logo.css  postura-summary.css  profile.css  script.js  style.css  work_session.css  work_session.js
website/templates/: _sidebar_logo.html  dashboard.html  index.html  postura-summary.html  profile.html  work_session.html
